--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,4 +4,82 @@ title: Middleman 4 Boilerplate
 
 <!-- PUT YOUR CONTENT FOR THE HOMEPAGE HERE -->
 <!-- DELETE THIS -->
-<%= partial "partials/watermark" %>
+<div class="container margin-top">
+  <div class="row">
+    <div class="col s12">
+      <img src="http://www.trendsettermarketing.net/file/2015/01/small-tsm-white.png">
+    </div>
+  </div>
+</div>
+<div class="container white z-depth-1 margin-top">
+  <div class="row">
+    <div class="col s10 offset-s1">
+      <h4 class="margin-top">Trendsetter Hoodies</h4>
+      <p>IN HONOR OF YOUR SUPPORT, WE WANT TO SEND YOU OUR TRENDSETTER HOODIE! PLEASE FILL THIS FORM IN AND YOU'LL BE SHIPPED A HOODIE WHEN IT'S AVAILABLE.</p>
+      <p class="red-text text-lighten-1">**Only recipients of this form may request a hoodie, unapproved entries will not be accommodated. Please do not share. **</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s10 offset-s1">
+      <img class="full-w" src="https://s3.amazonaws.com/myfangate.com/tsmshirts/mockups.png">
+    </div>
+  </div>
+  <div class="row">
+    <form class="col s12 m10 offset-m1">
+      <div class="row">
+        <div class="input-field col s10 offset-s1">
+          <input id="name" type="text">
+          <label for="name">Your Name</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s10 offset-s1">
+          <input id="address" type="text">
+          <label for="address">Shipping Address</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 offset-s1">
+          <label for="size">Hoodie Size</label>
+          <p>
+            <input name="group1" type="radio" id="xs" />
+            <label for="xs">XS</label>
+          </p>
+          <p>
+            <input name="group1" type="radio" id="sm" />
+            <label for="sm">SM</label>
+          </p>
+          <p>
+            <input name="group1" type="radio" id="md" />
+            <label for="md">MD</label>
+          </p>
+          <p>
+            <input name="group1" type="radio" id="lg" />
+            <label for="lg">LG</label>
+          </p>
+          <p>
+            <input name="group1" type="radio" id="xl" />
+            <label for="xl">XL</label>
+          </p>
+          <p>
+            <input name="group1" type="radio" id="xxl" />
+            <label for="xxl">XXL</label>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row">
+          <div class="input-field col s10 offset-s1">
+            <input id="comment" type="text">
+            <label for="comment">Additional Comments</label>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 center-align">
+          <button class="btn-large purple lighten-1">Submit</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
