added id to shirtform

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,8 +15,8 @@ title: Middleman 4 Boilerplate
   <div class="row">
     <div class="col s10 offset-s1">
       <h4 class="margin-top">Trendsetter Hoodies</h4>
-      <p>IN HONOR OF YOUR SUPPORT, WE WANT TO SEND YOU OUR TRENDSETTER HOODIE! PLEASE FILL THIS FORM IN AND YOU'LL BE SHIPPED A HOODIE WHEN IT'S AVAILABLE.</p>
-      <p class="red-text text-lighten-1">**Only recipients of this form may request a hoodie, unapproved entries will not be accommodated. Please do not share. **</p>
+      <p>IN HONOR OF YOUR SUPPORT, WE WANT TO SEND YOU OUR TRENDSETTER HOODIE! PLEASE FILL THIS FORM IN AND YOU'LL BE SHIPPED A HOODIE WHEN THEY'RE AVAILABLE.</p>
+      <p class="red-text text-lighten-1">** Only recipients of this form may request a hoodie, unapproved entries will not be accommodated. Please do not share. **</p>
     </div>
   </div>
   <div class="row">
@@ -25,7 +25,7 @@ title: Middleman 4 Boilerplate
     </div>
   </div>
   <div class="row">
-    <form class="col s12 m10 offset-m1">
+    <form id="shirtform" class="col s12 m10 offset-m1">
       <div class="row">
         <div class="input-field col s10 offset-s1">
           <input id="name" type="text">
