--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Middleman 4 Boilerplate
+title: Trendsetter Media & Marketing
 ---
 
 <!-- PUT YOUR CONTENT FOR THE HOMEPAGE HERE -->
@@ -16,7 +16,7 @@ title: Middleman 4 Boilerplate
     <div class="col s10 offset-s1">
       <h4 class="margin-top">Trendsetter Hoodies</h4>
       <p>IN HONOR OF YOUR SUPPORT, WE WANT TO SEND YOU OUR TRENDSETTER HOODIE! PLEASE FILL THIS FORM IN AND YOU'LL BE SHIPPED A HOODIE WHEN THEY'RE AVAILABLE.</p>
-      <p class="red-text text-lighten-1">** Only recipients of this form may request a hoodie, unapproved entries will not be accommodated. Please do not share. **</p>
+      <p class="red-text text-lighten-1">Only recipients of this form may request a hoodie, unapproved entries will not be accommodated. Please do not share.</p>
     </div>
   </div>
   <div class="row">
