form now submits to google

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -25,16 +25,17 @@ title: Trendsetter Media & Marketing
     </div>
   </div>
   <div class="row">
-    <form id="shirtform" class="col s12 m10 offset-m1">
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none !important;"></iframe>
+    <form action="https://docs.google.com/a/trendsettermarketing.net/forms/d/e/1FAIpQLSewV3x3p9Yh_MSwo7CIGcm9mc7Ja1fGTBvLcOGDMxL5UdGAAA/formResponse" id="shirtform" class="col s12 m10 offset-m1" method="POST" target="hidden_iframe">
       <div class="row">
         <div class="input-field col s10 offset-s1">
-          <input id="name" type="text">
+          <input name="entry.920194180" id="name" type="text">
           <label for="name">Your Name</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s10 offset-s1">
-          <input id="address" type="text">
+          <input name="entry.1622627988" id="address" type="text">
           <label for="address">Shipping Address</label>
         </div>
       </div>
@@ -42,27 +43,27 @@ title: Trendsetter Media & Marketing
         <div class="col s12 offset-s1">
           <label for="size">Hoodie Size</label>
           <p>
-            <input name="group1" type="radio" id="xs" />
+            <input name="entry.380080146" type="radio" id="xs" value="xs"/>
             <label for="xs">XS</label>
           </p>
           <p>
-            <input name="group1" type="radio" id="sm" />
+            <input name="entry.380080146" type="radio" id="sm" value="sm"/>
             <label for="sm">SM</label>
           </p>
           <p>
-            <input name="group1" type="radio" id="md" />
+            <input name="entry.380080146" type="radio" id="md" value="md" />
             <label for="md">MD</label>
           </p>
           <p>
-            <input name="group1" type="radio" id="lg" />
+            <input name="entry.380080146" type="radio" id="lg" value="lg "/>
             <label for="lg">LG</label>
           </p>
           <p>
-            <input name="group1" type="radio" id="xl" />
+            <input name="entry.380080146" type="radio" id="xl" value="xl "/>
             <label for="xl">XL</label>
           </p>
           <p>
-            <input name="group1" type="radio" id="xxl" />
+            <input name="entry.380080146" type="radio" id="xxl" value="xxl" />
             <label for="xxl">XXL</label>
           </p>
         </div>
@@ -70,7 +71,7 @@ title: Trendsetter Media & Marketing
       <div class="row">
         <div class="row">
           <div class="input-field col s10 offset-s1">
-            <input id="comment" type="text">
+            <input name="entry.1244478562" id="comment" type="text">
             <label for="comment">Additional Comments</label>
           </div>
         </div>
