form now validates input

--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -6,8 +6,17 @@
 
 main{
   background: #1faf91;
+  padding-bottom: 50px;
 }
 
 .margin-top{
   margin-top: 40px;
+}
+
+span.error{
+  display: none !important;
+}
+
+.btn-large{
+  margin-bottom: 25px;
 }
